Ansible/project/devops/k8s-gitlab-file/namespace.yaml
---
kind: Namespace  
apiVersion: v1 
metadata:
  name: kube-gitlab  
  labels:
    name: kube-gitlab-v1  

# kubectl create -f my-namespace.yaml
